--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -115,10 +115,10 @@
                 <span class="howitworktxt">How does it work</span>
                 <div class="features container row  mt-5 mt-sm-5 mt-md-5">
                     <div class="feature1 col-6 col-sm-4 col-md-4 mt-3"><img src="Icon.png" alt="icon.png "
-                            class="fic1"><span class="feauture1txt">Daily <br>
+                            class="fic1"><span class="feauture1txt">Daily
                             Discounts</span></div>
                     <div class="feature2 col-6 col-sm-4 col-md-4 mt-3"><img src="Icon (1).png" alt="icon.png"
-                            class="fic2"><span class="feauture2txt">Live <br>
+                            class="fic2"><span class="feauture2txt">Live
                             Tracing</span>
                     </div>
                     <div class="feature3  col-sm-4 col-md-4 mt-3">
@@ -204,8 +204,12 @@
                         class="ordernowbtn5  ">Order Now</a></div>
             </div>
         </div>
+
         <div class="footer container-fluid">
             <div class="row footertitles  container-fluid">
+
+                <hr class="horizontal1">
+
                 <div class="footertitle1 col-sm-6 col-md-6 col-lg-2">
                     <ul>
                         <li><strong> company</strong></li><br>
@@ -245,7 +249,11 @@
                         </li><br>
                     </ul>
                 </div>
+
+                <hr class="horizontal2">
+
             </div>
+
         </div>
     </div>
 
